fix header on smaller screen

--- a/src/client/src/styles/main.css
+++ b/src/client/src/styles/main.css
@@ -763,3 +763,14 @@ body {
 .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
     outline: 0;
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+	.nav > li > a{
+		padding: 10px 7px;
+	}
+
+	.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
+		margin-left: -15px;
+    	margin-right: -15px;
+	}
+}
